Add some Functions and Some fix

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <h2 class="title">Più di 500.00 team utilizzano Dropbox Business</h2>
         <a href="#">Scopri di più sui nostri clienti</a>
       </div>
-      <div class="designit">
+      <div class="layout-square">
 
         <!--? LEFT SQUARE -->
         <div class="square-col">
@@ -534,17 +534,62 @@
     <section>
       <div class="small-container">
         <h2 class="title">Domande frequenti</h2>
+
         <div class="FAQ">
-          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
-          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+          <div class="FAQ-quest">
+            <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+            <span><i class="fa-solid fa-chevron-down fa-sm"></i></span>
+            <span><i class="fa-solid fa-chevron-up fa-sm"></i></span>
+          </div>
+          <div class="FAQ-answer">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae dolorem autem veritatis
+            molestias assumenda voluptatum commodi nostrum? Harum cupiditate, ratione quidem ducimus
+            magnam sunt nam expedita ad, hic repellat omnis.
+            Exercitationem, cumque! Amet earum corporis laboriosam dolorum aspernatur tempora
+            ducimus asperiores esse adipisci. Eos alias, minus deserunt debitis ut sit, dolore
+            voluptas aperiam, iure autem impedit vel libero non rem!
+            Blanditiis veritatis eos veniam quas expedita accusantium placeat quidem rem,
+            consequuntur vero odio aut autem ullam illo vitae cum iure adipisci eveniet ab
+            perspiciatis quam aspernatur. Voluptas facilis iure incidunt.
+          </div>
         </div>
+
         <div class="FAQ">
-          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
-          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+          <div class="FAQ-quest">
+            <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+            <span><i class="fa-solid fa-chevron-down fa-sm"></i></span>
+            <span><i class="fa-solid fa-chevron-up fa-sm"></i></span>
+          </div>
+          <div class="FAQ-answer">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae dolorem autem veritatis
+            molestias assumenda voluptatum commodi nostrum? Harum cupiditate, ratione quidem ducimus
+            magnam sunt nam expedita ad, hic repellat omnis.
+            Exercitationem, cumque! Amet earum corporis laboriosam dolorum aspernatur tempora
+            ducimus asperiores esse adipisci. Eos alias, minus deserunt debitis ut sit, dolore
+            voluptas aperiam, iure autem impedit vel libero non rem!
+            Blanditiis veritatis eos veniam quas expedita accusantium placeat quidem rem,
+            consequuntur vero odio aut autem ullam illo vitae cum iure adipisci eveniet ab
+            perspiciatis quam aspernatur. Voluptas facilis iure incidunt.
+          </div>
         </div>
+
         <div class="FAQ">
-          <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
-          <span><i class="fa-solid fa-chevron-down fa-s"></i></span>
+          <div class="FAQ-quest">
+            <h3>Qual è la differenza tra Dropbox Standard e Dropbox Business Advanced?</h3>
+            <span><i class="fa-solid fa-chevron-down fa-sm"></i></span>
+            <span><i class="fa-solid fa-chevron-up fa-sm"></i></span>
+          </div>
+          <div class="FAQ-answer">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae dolorem autem veritatis
+            molestias assumenda voluptatum commodi nostrum? Harum cupiditate, ratione quidem ducimus
+            magnam sunt nam expedita ad, hic repellat omnis.
+            Exercitationem, cumque! Amet earum corporis laboriosam dolorum aspernatur tempora
+            ducimus asperiores esse adipisci. Eos alias, minus deserunt debitis ut sit, dolore
+            voluptas aperiam, iure autem impedit vel libero non rem!
+            Blanditiis veritatis eos veniam quas expedita accusantium placeat quidem rem,
+            consequuntur vero odio aut autem ullam illo vitae cum iure adipisci eveniet ab
+            perspiciatis quam aspernatur. Voluptas facilis iure incidunt.
+          </div>
         </div>
       </div>
     </section>
