--- a/index.html
+++ b/index.html
@@ -53,26 +53,29 @@
   <header>
     <!--* Jumbotron -->
     <div class="large-container">
+      <div class="jumbotron">
 
-      <!--* Main Title -->
-      <h1 id="main-title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+        <!--* Main Title -->
+        <h1 id="main-title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
 
-      <!--* Jumbotron -->
-      <div class="jumbotron d-flex">
-        <div class="small-col">
-          <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
-            stesso posto. Dropbox
-            Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato
-            per ottimizzare il
-            flusso di lavoro esistente.
-          </p>
-          <a href="#" class="button free-trial">Inizia la tua prova gratuita</a>
-          <div class="m-bottom-lg">Annulla in qualsiasi momento</div>
-          <div><i class="fa-solid fa-arrow-down fa-3x"></i></div>
-        </div>
+        <!--* Jumbotron -->
+        <div class="d-flex">
+          <div class="small-col">
+            <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+              stesso posto. Dropbox
+              Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e
+              integrato
+              per ottimizzare il
+              flusso di lavoro esistente.
+            </p>
+            <a href="#" class="button free-trial">Inizia la tua prova gratuita</a>
+            <div class="m-bottom-lg">Annulla in qualsiasi momento</div>
+            <a class="arrow-down" href="#tariff"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
+          </div>
 
-        <div class="large-col">
-          <img src="img/jumbo.png" alt="Show DropBox">
+          <div class="large-col">
+            <img src="img/jumbo.png" alt="Show DropBox">
+          </div>
         </div>
       </div>
     </div>
@@ -83,7 +86,7 @@
     <div class="small-container">
 
       <!--! Tariffs -->
-      <section class="tariff">
+      <section id="tariff">
 
         <h2 class="title">Trova il piano business che fa per te</h2>
 
@@ -109,37 +112,36 @@
               <span>Singolo</span>
             </div>
             <div class="main-card">
+
               <!-- Title -->
               <h3>Professional</h3>
               <!-- Price -->
               <div class="tariff-price">
-                <span><b>€ 12.00</b></span>
+                <div class="m-bottom-xs"><b>€ 12.00</b></div>
                 <div>/mese</div>
               </div>
 
               <!-- Details -->
-              <div class="details m-sm">
-                <ul class="fa-ul">
+              <ul class="m-m fa-ul">
 
-                  <!-- User -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
-                    1 utente
-                  </li>
+                <!-- User -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                  1 utente
+                </li>
 
-                  <!-- Space -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
-                    5 TB di spazio di archiviazione sicuro
-                  </li>
+                <!-- Space -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                  5 TB di spazio di archiviazione sicuro
+                </li>
 
-                  <!-- Share -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
-                    Funzioni di produttività premium e condivisione di file semplice e sicura
-                  </li>
-                </ul>
-              </div>
+                <!-- Share -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                  Funzioni di produttività premium e condivisione di file semplice e sicura
+                </li>
+              </ul>
 
               <!-- Button -->
               <a href="#" class="button details-button">Prova gratis per 30 giorni</a>
@@ -153,15 +155,13 @@
               <ul class="fa-ul">
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span> Invia
-                  file fino
-                  a 100 GB con Dropbox Transfert
+                      style="color: #0061ff;"></i></span>
+                  Invia file fino a 100 GB con Dropbox Transfert
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Cartelle
-                  offline
-                  su dispositivi mobili
+                      style="color: #0061ff;"></i></span>
+                  Cartelle offline su dispositivi mobili
                 </li>
               </ul>
             </div>
@@ -174,38 +174,37 @@
               <span>Team</span>
             </div>
             <div class="main-card">
+
               <!-- Title -->
               <h3>Advanced</h3>
               <!-- Price -->
               <div class="tariff-price">
-                <span><b>€ 18.00</b></span>
+                <div class="m-bottom-xs"><b>€ 18.00</b></div>
                 <div>/utente/mese</div>
               </div>
 
               <!-- Details -->
-              <div class="details m-sm">
-                <ul class="fa-ul">
+              <ul class="m-m fa-ul">
 
-                  <!-- User -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
-                    3 o più utenti
-                  </li>
+                <!-- User -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                  3 o più utenti
+                </li>
 
-                  <!-- Space -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
-                    Tutto lo spazio di cui ha bisogno il tuo team
-                  </li>
+                <!-- Space -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                  Tutto lo spazio di cui ha bisogno il tuo team
+                </li>
 
-                  <!-- Share -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
-                    Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo
-                    team
-                  </li>
-                </ul>
-              </div>
+                <!-- Share -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                  Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo
+                  team
+                </li>
+              </ul>
 
               <!-- Button -->
               <a href="#" class="button details-button">Prova gratis per 30 giorni</a>
@@ -219,25 +218,28 @@
               <ul class="tariff-plane fa-ul">
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span> Nessun limite di spazio per i file
+                      style="color: #0061ff;"></i></span>
+                  Nessun limite di spazio per i file
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Cartelle ofline su dispositivi mobili
+                      style="color: #0061ff;"></i></span>
+                  Cartelle ofline su dispositivi mobili
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Risparmi del 50% rispetto alle iscrizioni
-                  singole
+                      style="color: #0061ff;"></i></span>
+                  Risparmi del 50% rispetto alle iscrizioni singole
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Possibilità di inserire nuovi membri del
-                  team
+                      style="color: #0061ff;"></i></span>
+                  Possibilità di inserire nuovi membri del team
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Gestione dei permessi in base ai ruoli
+                      style="color: #0061ff;"></i></span>
+                  Gestione dei permessi in base ai ruoli
                 </li>
               </ul>
             </div>
@@ -250,38 +252,37 @@
               <span>Azienda</span>
             </div>
             <div class="main-card">
+
               <!-- Title -->
               <h3>Enterprice</h3>
               <!-- Price -->
               <div class="tariff-price">
-                <span><b>Contattaci</b></span>
+                <div class="m-bottom-xs"><b>Contattaci</b></div>
                 <div>-</div>
               </div>
 
               <!-- Details -->
-              <div class="details m-sm">
-                <ul class="fa-ul">
+              <ul class="m-m fa-ul">
 
-                  <!-- User -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-user"></i></span>
-                    10 o più utenti
-                  </li>
+                <!-- User -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-user"></i></span>
+                  10 o più utenti
+                </li>
 
-                  <!-- Space -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
-                    Soluzione personalizzata per la tua azienda
-                  </li>
+                <!-- Space -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-folder"></i></span>
+                  Soluzione personalizzata per la tua azienda
+                </li>
 
-                  <!-- Share -->
-                  <li>
-                    <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
-                    Assistenza personalizzata per aiutare gli amministratori in una gestione su
-                    larga scala
-                  </li>
-                </ul>
-              </div>
+                <!-- Share -->
+                <li>
+                  <span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+                  Assistenza personalizzata per aiutare gli amministratori in una gestione su
+                  larga scala
+                </li>
+              </ul>
 
               <!-- Button -->
               <a href="#" class="button details-button">Contattaci</a>
@@ -295,15 +296,18 @@
               <ul class="tariff-plane fa-ul">
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Cartelle ofline su dispositivi mobili
+                      style="color: #0061ff;"></i></span>
+                  Cartelle ofline su dispositivi mobili
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Servizio assistenza 24/h
+                      style="color: #0061ff;"></i></span>
+                  Servizio assistenza 24/h
                 </li>
                 <li>
                   <span class="fa-li"><i class="fa-solid fa-check"
-                      style="color: #0061ff;"></i></span>Possibilità di personalizzazione totale
+                      style="color: #0061ff;"></i></span>
+                  Possibilità di personalizzazione totale
                 </li>
               </ul>
             </div>
@@ -323,7 +327,7 @@
               <h3>Enterprice</h3>
               <div class="f-size-09">
                 <!-- Price -->
-                <h4 class="m-top-sm">Contatta l'ufficio vendite per i prezzi</h4>
+                <h4>Contatta l'ufficio vendite per i prezzi</h4>
                 <!-- Description -->
                 <p class="m-top-m">Soluzioni personalizzate e supporto su misura per aiutare i
                   professionisti IT
@@ -331,28 +335,31 @@
               </div>
             </div>
             <div class="small-col">
-              <a href="#" class="button details-button">Contatta l'ufficio vendite</a>
+              <a href="#" class="button">Contatta l'ufficio vendite</a>
             </div>
           </div>
         </div>
       </section>
 
       <!--! Partenr -->
-      <section class="partner">
-        <div class="large-col">
-          <img src="img/partner.png" alt="Partenr guys" class="partner-img">
-        </div>
-        <div class="small-col">
-          <h3>Entra in contatto con un partner Dropbox</h3>
-          <p>Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzione e i servizi
-            necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione,
-            integrazione, gestione e supporto continui.</p>
-          <a href="#" class="button bg-white">Trova un partner</a>
+      <section id="partner">
+        <div class="d-flex">
+
+          <div class="large-col">
+            <img src="img/partner.png" alt="Partenr guys" class="partner-img">
+          </div>
+          <div class="small-col">
+            <h3>Entra in contatto con un partner Dropbox</h3>
+            <p>Trova un partner Dropbox e Hello Sign di fiducia. Ottieni le soluzione e i servizi
+              necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione,
+              integrazione, gestione e supporto continui.</p>
+            <a href="#" class="button bg-white">Trova un partner</a>
+          </div>
         </div>
       </section>
 
       <!--! Description -->
-      <section class="description">
+      <section id="description">
         <h2 class="title">Esegui più operazioni con Dropbox Business</h2>
         <div class="description-row">
 
@@ -444,7 +451,7 @@
     </div>
 
     <!--! Client -->
-    <section class="client">
+    <section id="client">
       <div class="small-container">
         <h2 class="title">Più di 500.00 team utilizzano Dropbox Business</h2>
         <a href="#">Scopri di più sui nostri clienti</a>
@@ -519,7 +526,7 @@
     </section>
 
     <!--! Try for Free -->
-    <section class="bg-try-free">
+    <section id="bg-try-free">
       <div class="small-container try-free">
         <div class="large-col">
           <h2 class="title">Porta Dropbox Business nelal tua azienda.</h2>
@@ -531,7 +538,7 @@
     </section>
 
     <!--! FAQ -->
-    <section>
+    <section id="FAQ">
       <div class="small-container">
         <h2 class="title">Domande frequenti</h2>
 
@@ -676,3 +683,10 @@
 </body>
 
 </html>
+
+
+<!-- EXTRA
+Click sulla freccia che ti porta alla sezione sotto
+Hover su fixed esce la tendina come sul sito originale
+Tendina della chat che esce in basso a destra
+-->
