Add Dropbox Chat

--- a/index.html
+++ b/index.html
@@ -712,6 +712,37 @@
         </div>
       </div>
     </section>
+
+    <!--! Chat -->
+    <div class="chat">
+      <div class="header-chat">
+        <i class="fa-solid fa-comments fa-xl"></i>
+        <span class="title-chat">Chat</span>
+        <div class="control-chat">
+          <i class="fa-solid fa-minus fa-xl"></i>
+          <i class="fa-solid fa-xmark fa-xl"></i>
+        </div>
+      </div>
+      <div class="main-chat">
+        <div class="message">
+          <div class="message-profile">
+            <img src="img/dropbox-chat.png" alt="dropbox-chat immage">
+            <div class="name-chat">Andrea</div>
+          </div>
+          <div class="message-body">Ciao posso come posso aiutarti???!!!</div>
+        </div>
+
+        <div class="text-message">
+          <textarea placeholder="Type your message..." cols="50" id="text-message"></textarea>
+          <a href="#" id="send-message"><i class="fa-regular fa-paper-plane fa-shake"></i></a>
+        </div>
+        <div class="footer-message">
+          <img src="img/dropbox-square.png" alt="dropbox square">
+          <div>Powered by <strong>Andrea Romano</strong></div>
+        </div>
+      </div>
+    </div>
+
   </main>
 
   <!--! Footer -->
